Revert "Fix z-index for dateInputWidget"
This reverts commit 1bf72398a94dd7be8b22ebfdf6e663d1f42b2107.

Reason for revert: Should not go into REL1_31

--- a/resources/stylesheets/ext.bluespice.pageformsconnector.less
+++ b/resources/stylesheets/ext.bluespice.pageformsconnector.less
@@ -1,9 +1,12 @@
 body.mediawiki,
 body.mediawiki.x-body {
-	.mw-widget-dateInputWidget-calendar {
-		z-index: 5 !important;
+	.ui-widget {
+		&.ui-widget-content {
+			&.ui-datepicker {
+				z-index: 5 !important;
+			}
+		}
 	}
-
 	.PF_timepicker {
 		z-index: 5 !important;
 	}
